--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LuxeMetrics - 高級エステサロン経営ダッシュボード</title>
+    <title>LuxeMetrics - NOBLEダッシュボード</title>
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -148,7 +148,7 @@
         // --- Google Apps Script連携関数 ---
 
         // GASのWebアプリURLを設定（デプロイ後に実際のURLに変更してください）
-        const GAS_WEB_APP_URL = 'YOUR_GAS_WEB_APP_URL_HERE';
+        const GAS_WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbxmSKXpHDEVbHeKEIHrtk_DoQfXIsMXBExfa7CzhpkizuC_wf-UY5YqXn0Ctc4u6lbq/exec';
 
         /**
          * スプレッドシートにデータを保存
